@@ -1,5 +1,5 @@
-FROM java:8-jdk
+FROM openjdk:8-jdk-slim
 COPY target/spring-boot-sample-data-rest-0.1.0.jar /app/
 EXPOSE 8000
 WORKDIR /app
-CMD /bin/bash -c 'java -jar spring-boot-sample-data-rest-0.1.0.jar'
+CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "spring-boot-sample-data-rest-0.1.0.jar"]
